# Scalable-Locally-Injective-Mappings

./: CMakeLists.txt  README.md
binaries/linux-x86_64/: ReweightedARAP
binaries/macos-x86_64/: ReweightedARAP
src/: AlgorithmStage.h  Energy.h  FastLsBuildUtils.cpp  FastLsBuildUtils.h  GlobalLocalParametrization.cpp  GlobalLocalParametrization.h  LinesearchParametrizer.cpp  LinesearchParametrizer.h  LocalSchaefersParametrizer.h  LocalWeightedArapParametrizer.cpp  LocalWeightedArapParametrizer.h  Param_State.cpp  Param_State.h  ParametrizationAlgorithm.h  PardisoSolver.cpp  PardisoSolver.h  StateManager.cpp  StateManager.h  SymmetricDirichlet.cpp  SymmetricDirichlet.h  eigen_stl_utils.cpp  eigen_stl_utils.h  main.cpp  parametrization_utils.cpp  parametrization_utils.h
